# eh_codegen

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  build_roguelite.sh  fix.sh  shell.nix  watch.sh
codegen_schema/: Cargo.toml
codegen_schema/src/: lib.rs  schema.rs
eh_codegen/: Cargo.toml
eh_codegen/src/: codegen.rs  main.rs
eh_codegen/src/codegen/: enums.rs  objects.rs  structs.rs  switch.rs
eh_mod_cli/: Cargo.toml
eh_mod_cli/src/: lib.rs
eh_mod_dev/: Cargo.toml
eh_mod_dev/src/: builder.rs  database.rs  helpers.rs  layout.rs  lib.rs  main.rs  mapping.rs  quests.rs  reporting.rs  test_mod.rs  utils.rs  validators.rs  vanilla_mappings.rs
eh_mod_dev/src/database/: db_item.rs  extra_item.rs  iters.rs  macro_impls.rs  stored_db_item.rs
eh_mod_example/: Cargo.toml
eh_mod_example/src/: main.rs  test_mod.rs
eh_rogue_mod/: Cargo.toml
eh_rogue_mod/base_database/Component/: Afterburner_buggy.json
eh_rogue_mod/original_database/Technology/: Hangar_18.json
eh_rogue_mod/output/: .managed_files  AmmunitionObsolete_10.json  AmmunitionObsolete_15.json  AmmunitionObsolete_17.json  AmmunitionObsolete_24.json  AmmunitionObsolete_33.json  AmmunitionObsolete_34.json  AmmunitionObsolete_41.json  AmmunitionObsolete_43.json  AmmunitionObsolete_49.json  AmmunitionObsolete_50.json  AmmunitionObsolete_54.json  AmmunitionObsolete_71.json  AmmunitionObsolete_74.json  AmmunitionObsolete_82.json  AmmunitionObsolete_91.json  Ammunition_102.json  Ammunition_110.json  Ammunition_115.json  Ammunition_118.json  Ammunition_121.json  Ammunition_122.json  Ammunition_123.json  Ammunition_124.json  Ammunition_126.json  Ammunition_135.json  Ammunition_139.json  BehaviorTree_10.json  BehaviorTree_103.json  BehaviorTree_113.json  BehaviorTree_115.json  BehaviorTree_116.json  BehaviorTree_121.json  BehaviorTree_122.json  BehaviorTree_125.json  BehaviorTree_128.json  BehaviorTree_132.json  BehaviorTree_145.json  BehaviorTree_22.json  BehaviorTree_302.json  (+892 more)
eh_rogue_mod/output/auto/: AmmunitionObsolete_18.json  AmmunitionObsolete_31.json  AmmunitionObsolete_42.json  AmmunitionObsolete_52.json  AmmunitionObsolete_61.json  AmmunitionObsolete_62.json  AmmunitionObsolete_63.json  AmmunitionObsolete_64.json  AmmunitionObsolete_69.json  AmmunitionObsolete_73.json  AmmunitionObsolete_87.json  Ammunition_113.json  Ammunition_114.json  Ammunition_128.json  Ammunition_131.json  Ammunition_138.json  Ammunition_140.json  Ammunition_142.json  Ammunition_143.json  Ammunition_146.json  Ammunition_149.json  BehaviorTree_101.json  BehaviorTree_108.json  BehaviorTree_11.json  BehaviorTree_12.json  BehaviorTree_13.json  BehaviorTree_139.json  BehaviorTree_140.json  BehaviorTree_24.json  BehaviorTree_6.json  BulletPrefab_2.json  Component_103.json  Component_129.json  Component_136.json  Component_139.json  Component_147.json  Component_148.json  Component_154.json  Component_158.json  Component_160.json  (+210 more)
eh_rogue_mod/output/auto/Ammunition/: 109.json
eh_rogue_mod/output/auto/AmmunitionObsolete/: 12.json  13.json  3.json  37.json  46.json  55.json  57.json  67.json
eh_rogue_mod/output/auto/BehaviorTree/: 102.json  106.json  111.json  112.json  117.json  123.json  124.json  25.json  300.json
eh_rogue_mod/output/auto/BulletPrefab/: 5.json  6.json
eh_rogue_mod/output/auto/Component/: 104.json  110.json  114.json  119.json  12.json  121.json  13.json  133.json  153.json  174.json  176.json  198.json  202.json  209.json  22.json  221.json  278.json  279.json  281.json  61.json  65.json  71.json  75.json  85.json  87.json  93.json
eh_rogue_mod/output/auto/ComponentStats/: 278.json  69.json
eh_rogue_mod/output/auto/Device/: 1.json  11.json  6.json
eh_rogue_mod/output/auto/Fleet/: 10.json
eh_rogue_mod/output/auto/QuestItem/: 13.json
eh_rogue_mod/output/auto/Satellite/: 23.json  24.json
eh_rogue_mod/output/auto/SatelliteBuild/: 22.json  9.json
eh_rogue_mod/output/auto/Ship/: 101.json  11.json  119.json  130.json  134.json  51.json  54.json  60.json  7.json  77.json
eh_rogue_mod/output/auto/ShipBuild/: 101.json  105.json  115.json  117.json  121.json  123.json  139.json  180.json  187.json  19.json  195.json  225.json  242.json  255.json  262.json  267.json  28.json  308.json  324.json  327.json  348.json  352.json  357.json  5.json  50.json  60.json  66.json  67.json  74.json  76.json  77.json  90.json
eh_rogue_mod/output/auto/Technology/: 100.json  103.json  105.json  107.json  111.json  12.json  132.json  140.json  142.json  150.json  157.json  162.json  163.json  168.json  181.json  183.json  195.json  2.json  21.json  216.json  218.json  224.json  225.json  228.json  23.json  230.json  234.json  24.json  246.json  248.json  251.json  252.json  253.json  254.json  264.json  277.json  29.json  290.json  294.json  3.json  (+24 more)
eh_rogue_mod/output/auto/VisualEffect/: 16.json  2.json  4.json
eh_rogue_mod/output/auto/Weapon/: 101.json  124.json  29.json  67.json  69.json  72.json  79.json  84.json  86.json
eh_rogue_mod/output/eh/: easter_Quest.json  escapepod_Quest.json  fac_delivery_Quest.json  freestuff_Quest.json  local_pirates_Quest.json  paladin_Ship.json  paladin_xx_ShipBuild.json  scavenger_trade_Quest.json  scout_mk2_x_ShipBuild.json  scout_x_ShipBuild.json
eh_rogue_mod/output/eh/Loot/: civilian_ship_reward.json  covid_loot.json  merchant_goods.json  merchant_loot.json  some_money_x5.json  worm_boss_loot.json
eh_rogue_mod/output/eh/Quest/: fac_pirates.json  fac_resources.json  pandemic.json  scavenger_distress.json  scavenger_harbor.json  tutorial.json
eh_rogue_mod/output/settings/: DatabaseSettings.json  DebugSettings.json  MusicPlaylist.json  SkillSettings.json
eh_rogue_mod/src/: main.rs  merchant_loot.json  random_stuff.json  scav_loot.json  test_mod.rs
eh_rogue_mod/src/test_mod/: quest_surgeon.rs
eh_schema/: Cargo.toml
eh_schema/src/: extensions.rs  helpers.rs  lib.rs  schema.rs
eh_schema/src/extensions/: character.rs  component.rs  loot_content.rs  quest.rs  quest_item.rs  requirements.rs  ship.rs
smart_output/: Cargo.toml
smart_output/src/: lib.rs
(+702 files in other folders)
