[workspace]
resolver = "2"

members = ["db/db_minimal", "db/db_vanilla", "diagnostic", "eh_codegen", "eh_mod_cli", "eh_mod_dev", "eh_mod_example", "eh_rogue_mod", "eh_roguelite", "eh_schema", "quests"]

[workspace.dependencies]
bitcode = "0.6.0"
clap = "4.5.7"
color-backtrace = "0.6.1"
convert_case = "0.6.0"
downcast-rs = "1.2.1"
duplicate = "1.0.0"
flate2 = "1"
fs-err = "2.11.0"
glam = "0.28"
include_dir = "0.7.4"
itertools = "0.13.0"
lockfree-object-pool = "0.1.5"
miette = "7.2.0"
num_cpus = "1.16.0"
owo-colors = "4"
parking_lot = "0.12.3"
paste = "1.0.15"
pretty-duration = "0.1.1"
prettyplease = "0.2.20"
proc-macro2 = "1.0.85"
quick-xml = "0.34.0"
quote = "1.0.36"
rayon = "1.10.0"
replace_with = "0.1.7"
serde = "1.0.203"
serde_json = "1.0.117"
serde_json5 = "0.1.0"
serde_repr = "0.1.19"
sha2 = "0.10.8"
syn = "2.0.66"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-panic = { version = "0.1.2", default-features = false }
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
# Local dependencies
db_minimal = { path = "db/db_minimal" }
db_vanilla = { path = "db/db_vanilla" }
diagnostic = { path = "diagnostic" }
eh_mod_cli = { path = "eh_mod_cli" }
eh_mod_dev = { path = "eh_mod_dev" }
eh_schema = { path = "eh_schema" }
quests = { path = "quests" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
lto = "off"
strip = false
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
