[package]
name = "eh_codegen"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/juh9870/random_cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
convert_case = { workspace = true }
fs-err = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quick-xml = { workspace = true, features = ["serialize", "serde-types"] }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
walkdir = { workspace = true }
