[package]
name = "eh_mod_dev"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/juh9870/random_cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = { workspace = true }
diagnostic = { workspace = true }
eh_schema = { path = "../eh_schema" }
flate2 = { workspace = true }
fs-err = { workspace = true }
include_dir = { workspace = true }
owo-colors = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
rayon = { workspace = true }
replace_with = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json5 = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
