[package]
name = "eh_rogue_mod"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-backtrace = { workspace = true }
eh_mod_dev = { path = "../eh_mod_dev" }
serde = { workspace = true }
tracing = { workspace = true }
tracing-panic = { workspace = true, default-features = false }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[package.metadata.cargo-machete]
ignored = ["serde"]
