[package]
name = "eh_schema"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/juh9870/random_cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = { workspace = true }
diagnostic = { workspace = true }
glam = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
